@@ -5,6 +5,9 @@ Changes for Crate
 Unreleased
 ==========
 
+ - Fixed an issue with GROUP BY queries on partitioned tables which could lead
+   to wrong results
+
  - Optimized retry logic in bulk and COPY operations to handle
    and coordinate retries once per node
 
